<resources>
    <string name="app_name">Instagram</string>
    <string name="take_picture">Take Picture</string>
    <string name="post_description">Post Description....</string>
    <string name="submit">Submit</string>
    <string name="logout">LogOut</string>
    <string name="view_feed">View Feed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>